--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env RUNNING_ENV=dev nest start --watch",
+    "dev": "cross-env RUNNING_ENV=dev nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -31,9 +31,13 @@
     "@nestjs/swagger": "^6.3.0",
     "axios": "^1.4.0",
     "cache-manager": "^5.2.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "mongoose": "^7.1.1",
+    "mysql2": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.16",
     "yaml": "^2.2.2"
   },
   "devDependencies": {
@@ -58,7 +62,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.83.1"
   },
   "jest": {
     "moduleFileExtensions": [
