--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway",
+  "name": "nest-learning",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "dev": "cross-env RUNNING_ENV=dev nest start --watch",
+    "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node --inspect-brk dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,31 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fastify/static": "^6.10.1",
-    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-fastify": "^9.4.0",
-    "@nestjs/swagger": "^6.3.0",
-    "axios": "^1.4.0",
-    "cache-manager": "^5.2.1",
-    "class-validator": "^0.14.0",
-    "cross-env": "^7.0.3",
-    "mongoose": "^7.1.1",
-    "mysql2": "^3.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "typeorm": "^0.3.16",
-    "yaml": "^2.2.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
@@ -62,8 +48,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4",
-    "webpack": "^5.83.1"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
