--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/mysql": "^2.15.21",
+    "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -34,7 +37,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/multer": "^1.4.7",
-    "@types/node": "18.15.11",
+    "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
