--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/mysql": "^2.15.21",
-    "mysql2": "^3.3.3",
+    "mysql2": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.16"
