--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/express-session": "^1.17.7",
     "@types/mysql": "^2.15.21",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "js-yaml": "^4.1.0",
     "mysql2": "^3.3.4",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +43,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.11",
